--- a/_posts/2020-01-01-rethink-2019.md
+++ b/_posts/2020-01-01-rethink-2019.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 2019년 회고록
-tags: []
+tags: [일상]
 ---
 
 회고를 작성하는 스타일은 아니지만, 남들도 다 작성하는 거 같고, 사실 이 이름을 걸고 이야기를 할 것들이 의외로 많았다는 사실을 깨달아서 끄적끄적 거린다. (무려 2020년이 된 다음에!)
