fix broken grammer

--- a/_posts/2020-01-11-iitp2020.md
+++ b/_posts/2020-01-11-iitp2020.md
@@ -6,7 +6,7 @@ tags: [cryptocurrency, blockchain]
 
 IITP 관련 및 KISA 관련해서 몇몇 정부과제들이 떨어져서 찬찬히 살펴보고 있는데, 사실 정부 과제에 대한 몇몇 편견을 깨부술 정도로 잘 만들어진 해볼만한 블록체인 쪽 과제들이 나와서 이 부분에 대해서 준비 중이다.
 
-관련 링크 : [과학기술정보통신부 공고 제2019-0654호 | (수정공고)2020년도 제1차 정보통신·방송 기술개발사업 및 표준개발지원사업 등 신규지원 대상과제 공고](https://ezone.iitp.kr/common/anno/02/form.tab?PMS_TSK_PBNC_ID=PBD201900000105)
+관련 링크 : [과학기술정보통신부 공고 제2019-0654호 | 수정공고 2020년도 제1차 정보통신·방송 기술개발사업 및 표준개발지원사업 등 신규지원 대상과제 공고](https://ezone.iitp.kr/common/anno/02/form.tab?PMS_TSK_PBNC_ID=PBD201900000105)
 
 많은 업체들이 물밑 작업(?)을 하거나 공개적으로 그렇게까지 IITP 관련 이야기를 안 하는 편인데, 뭐 이런 이야기 해서 작디작은 파이를 줄여 먹어버리는 것도 문제고, 뭐 사실 공동 연구로 들어갈 팀들은 이미 정해진 경우가 많고, 어떻게 이야기를 할 하등의 이유도 없고, 이미 정부 공고가 떴으면 다들 아는 사실이라고 가정하고 전화하고 아는 연락 채널 통해서 공동 연구기관을 구하는 쪽이 정상적일 것이다. (얼마나 대외 활동을 잘 했는가가 결정을 내리는 부분이 있는 것도 문제라면 문제겠다.)
 
